// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress render negetive progress 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div>
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width: 0%; height: 8px;"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
    >
      0%
    </span>
  </div>
</div>
`;

exports[`Progress render negetive successPercent 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div>
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width: 50%; height: 8px;"
        />
        <div
          class="ant-progress-success-bg"
          style="width: 0%; height: 8px;"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
    >
      50%
    </span>
  </div>
</div>
`;

exports[`Progress render out-of-range progress 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default"
>
  <div>
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width: 100%; height: 8px;"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
    >
      <i
        class="anticon anticon-check-circle"
      />
    </span>
  </div>
</div>
`;

exports[`Progress render out-of-range progress with info 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default"
>
  <div>
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width: 100%; height: 8px;"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
    >
      <i
        class="anticon anticon-check-circle"
      />
    </span>
  </div>
</div>
`;
